--- a/config/corne.conf
+++ b/config/corne.conf
@@ -32,34 +32,43 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # ######################################################
 ## RGB Underglow
 
-# Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
-# 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
 
-# Turn off RGB underglow when keyboard goes into idle state
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-
-# # Hue step in degrees (0-359) used by RGB actions default 10
-# CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
-
-# # Brightness step in percent used by RGB actions default 10
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=2
-# CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=10
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=240
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=5
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=10
-CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=2
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
-
+# Enable RGB underglow	type : bool default : n
+CONFIG_ZMK_RGB_UNDERGLOW=y
+# Underglow toggling also controls external power	type : bool default : y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+# Turn off RGB underglow when keyboard goes into idle state	type : bool default : n
 # Uncomment the line below to disable external power toggling by the underglow.
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# Turn off RGB underglow when USB is disconnected	type : bool default : n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
+# Hue step in degrees (0-359) used by RGB actions	type : int default : 10
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=5
+# Saturation step in percent used by RGB actions	type : int default : 10
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=5
+# Brightness step in percent used by RGB actions	type : int default : 10
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=5
+# Default hue in degrees (0-359)	type : int default : 0 hsl(180,60%,60%)
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=180
+# Default saturation percent (0-100)	type : int default : 100
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=60
+# Default brightness in percent (0-100)	type : int default : 100
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=60
+# Default effect speed (1-5)	type : int default : 3
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=3
+# Default effect index from the effect list (see below)	type : int default : 0
+# 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+# Default on state	type : bool default : y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+# Minimum brightness in percent (0-100)	type : int default : 0
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MIN=0
+# Maximum brightness in percent (0-100)	type : int default : 100
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=100
 
 
 # ######################################################
