--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,7 +4,7 @@
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="T'scornes"
+CONFIG_ZMK_KEYBOARD_NAME="Nyda's Keyboard"
 
 ### Power
 CONFIG_ZMK_SLEEP=y
@@ -91,7 +91,7 @@ CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 
 # Uncomment these two lines to add support for encoders
