--- a/sweep_keymap.yaml
+++ b/sweep_keymap.yaml
@@ -102,8 +102,8 @@ layers:
     - {t: ▽, type: trans}
   - - {t: ▽, type: trans}
     - BSPC
-    - TAB
-    - '0'
+    - LSHFT
+    - RA(0)
     - {t: ▽, type: trans}
     - '1'
     - '2'
