--- a/sweep_keymap.yaml
+++ b/sweep_keymap.yaml
@@ -114,8 +114,8 @@ layers:
   - {t: ▽, type: trans}
   - RGB OFF
   - LSHFT
-  - {t: ▽, type: trans}
-  - {t: ▽, type: trans}
+  - PAGE UP
+  - PAGE DOWN
   - BRI DN
   - BRI UP
   - MUTE
