Update keymap bépo

--- a/my_config.yaml
+++ b/my_config.yaml
@@ -37,7 +37,7 @@ parse_config:
   preprocess: true
   skip_binding_parsing: false
   raw_binding_map: {
-    &fr_e_acute : "é"
+    "&fr_e_acute" : "é"
   }
   sticky_label: sticky
   toggle_label: toggle
