--- a/sweep_keymap.yaml
+++ b/sweep_keymap.yaml
@@ -1,6 +1,6 @@
 layout: {qmk_keyboard: corne_rotated, qmk_layout: LAYOUT_split_3x6_3}
 layers:
-  default: [TAB, B, W, P, O, '''', ^, V, D, L, J, BSPC, LSHFT, A, U, I, E, ',', C, T, S, R, N, '"', LCTRL, Z, Y, X, ':', K, M, Q, G, H, F, ESC, french, lower, SPACE,
+  default: [TAB, B, W, P, O, ;, ^, V, D, L, J, BSPC, LSHFT, A, U, I, E, ',', C, T, S, R, N, M, LCTRL, Z, Y, X, ':', K, '''', Q, G, H, F, ESC, french, lower, SPACE,
     RET, raise, RALT]
   lower:
   - TAB
