--- a/my_config.yaml
+++ b/my_config.yaml
@@ -360,8 +360,8 @@ parse_config:
     RA(N6): '|'
     LS(DOT): '/'
     $euro_sign: '€'
-    LC(FR_Z): "UNDO"
-    LC(LS(FR_Z)): "REDO"
+    LC(W): "UNDO"
+    LC(LS(W)): "REDO"
 
 
 
