--- a/sweep_keymap.yaml
+++ b/sweep_keymap.yaml
@@ -47,7 +47,7 @@ layers:
   - TAB
   - ALL
   - RESEL
-  - {t: ▽, type: trans}
+  - SEARCH
   - COMMENT
   - {t: ▽, type: trans}
   - '0'
@@ -90,7 +90,7 @@ layers:
   - TAB
   - ALL
   - RESEL
-  - {t: ▽, type: trans}
+  - SEARCH
   - COMMENT
   - {t: ▽, type: trans}
   - {t: ▽, type: trans}
